# programador_turnos

./: .gitignore  API_SUMMARY.md  LLM_OPTIMIZATION.md  README.md  api_server.py  debug_solver.py  openapi.json  pyproject.toml  test_optimization.py  validate_constraints.py
bk_data/: schedules.json  schedules_example.csv
config/: __init__.py  reglas.yaml  system_prompt.yaml
data/: agentes.csv  agentes.json  agentes_ejemplo_completo.json  demanda.csv  demanda.json  demanda_ejemplo.json
output/: result_final.json  resumen.json  resumen_revertido.json  schedules.json  schedules.toon  temp_summary.json
shift_optimizer/: __init__.py  api.py  config.py  constraints.py  csv_parsers.py  deficit_analyzer.py  llm_optimizer.py  models.py  solver.py  utils.py
