[project]
name = "programador-turnos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.119.1",
    "openai>=2.7.2",
    "ortools>=9.7.2996",
    "pyyaml>=6.0",
    "toon-format",
]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }


